welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:2: error: not found: type int
var nb_biscuit : int = 0;
                 ^Poucet:7: error: not found: value anvance
  {anvance ();
   ^